--- a/common/public/frontend/register-volunteer.html
+++ b/common/public/frontend/register-volunteer.html
@@ -1,135 +1,87 @@
-@@ -0,0 +1,134 @@
+@@ -0,0 +1,86 @@
 +<!DOCTYPE html>
-+<html lang="en">
-+
++<html>
 +<head>
 +
-+    <meta charset="utf-8">
-+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-+    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-+    <meta name="description" content="">
-+    <meta name="author" content="">
-+    
-+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
++  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-app.js"></script>
++  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-auth.js"></script>
++  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-database.js"></script>
++  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-messaging.js"></script>
++  <!-- <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-storage.js"></script> -->
 +
-+    <title>Wishes that match my abilities</title>
-+    
++  <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
++  <script>
++    // Initialize Firebase
++    var config = {
++      apiKey: "AIzaSyCBu5uQ-q5RfRx6hOohDx664I37NJ2SNIU",
++      authDomain: "makeawish-bfc7f.firebaseapp.com",
++      databaseURL: "https://makeawish-bfc7f.firebaseio.com",
++      projectId: "makeawish-bfc7f",
++      storageBucket: "makeawish-bfc7f.appspot.com",
++      messagingSenderId: "794956668719"
++    };
++    firebase.initializeApp(config);
 +
-+    <!-- Bootstrap Core CSS -->
-+    <link href="css/bootstrap.min.css" rel="stylesheet">
++    // Get a reference to the database service
++    var database = firebase.database();
 +
-+    <!-- Custom CSS -->
-+    <link href="css/simple-sidebar.css" rel="stylesheet">
++    function writeUserData() {
++      var usersRef = database.ref('users/');
++      var newUserRef = usersRef.push();
 +
-+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-+    <!--[if lt IE 9]>
-+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-+    <![endif]-->
++      var x = document.getElementById("detailsForm");
++      var firstnameValue = x.elements[0].value;
++      var lastnameValue = x.elements[1].value;
++      var emailValue  = x.elements[2].value;
++      var addressValue = x.elements[3].value;
++      var radiusValue = x.elements[4].value;
++      var phoneNumberValue = x.elements[5].value;
++
++      newUserRef.set({
++        firstname: firstnameValue,
++        lastname: lastnameValue,
++        email: emailValue,
++        address: addressValue,
++        radius: radiusValue,
++        phoneNumber: phoneNumberValue
++      });
++    }
++
++    function writeNewSkill(skillName) {
++      var skillssRef = database.ref('skills/');
++      var newSkillRef = skillssRef.push();
++
++      newSkillRef.set({
++        name: skillName
++      });
++    }
++
++  </script>
 +</head>
 +
 +<body>
-+    <div id="fb-root"></div>
-+    <div id="fb-root"></div>
-+        <script>(function(d, s, id) {
-+          var js, fjs = d.getElementsByTagName(s)[0];
-+          if (d.getElementById(id)) return;
-+          js = d.createElement(s); js.id = id;
-+          js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.9";
-+          fjs.parentNode.insertBefore(js, fjs);
-+        }(document, 'script', 'facebook-jssdk'));</script>
-+        <div id="wrapper">
-+
-+        <!-- Sidebar -->
-+        <div id="sidebar-wrapper">
-+            <ul class="sidebar-nav">
-+                <li class="sidebar-brand" style="color: white;">
-+                    Volunteer Home
-+                </li>
-+                <li>
-+                    <p style='color: white;'>Show the wishes based on:</p>
-+                </li>
-+                <li>
-+                    <a href="myarea.html">Wishes of my Area</a>
-+                </li>
-+                <li>
-+                    <a href="icanhelp.html">Who can I help?</a>
-+                </li>
-+                <li>
-+                    <a href="needmemost.html">Who needs me most?</a>
-+                </li>
-+
-+                <br>
-+                <br>
-+
-+                <li class="sidebar-brand">
-+                    <a href="profile.html">
-+                        Visit Your Profile
-+                    </a>
-+                </li>
-+                <li class="sidebar-brand">
-+                    <a href="https://www.make-a-wish.org.uk/">Visit MakeAWish</a>
-+                </li>
-+            </ul>
-+        </div>
-+        <!-- /#sidebar-wrapper -->
-+
-+        <!-- Page Content -->
-+        <div id="page-content-wrapper">
-+            <div class="container-fluid">
-+                <div class="row">
-+                    <div class="col-lg-12">
-+                        <form action="post">
-+                            <div class="form-group">
-+                                <label for="fname">First Name:</label>
-+                                <input type="text" class="form-control" id="fname">
-+                            </div>
-+                            <div class="form-group">
-+                                <label for="lname">Last Name:</label>
-+                                <input type="text" class="form-control" id="lname">
-+                            </div>
-+                            <div class="form-group">
-+                                <label for="email">Email address:</label>
-+                                <input type="email" class="form-control" id="email">
-+                            </div>
-+                            <div class="form-group">
-+                                <label for="pwd">Update Password:</label>
-+                                <input type="password" class="form-control" id="pwd">
-+                            </div>
-+                            <div class="form-group">
-+                                <label for="postcode">Post Code:</label>
-+                                <input type="text" class="form-control" id="postcode">
-+                            </div>
-+                            <div class="form-group">
-+                                <label for="phone">Phone Number:</label>
-+                                <input type="text" class="form-control" id="phone">
-+                            </div>
-+                            <button type="submit" class="btn btn-default">Register</button>
-+                        </form>
-+                    </div>
-+                </div>
-+            </div>
-+        </div>
-+        <!-- /#page-content-wrapper -->
-+        
-+    </div>
-+    <!-- /#wrapper -->
-+
-+    <!-- jQuery -->
-+    <script src="js/jquery.js"></script>
-+
-+    <!-- Bootstrap Core JavaScript -->
-+    <script src="js/bootstrap.min.js"></script>
-+
-+    <!-- Menu Toggle Script -->
-+    <script>
-+    $("#menu-toggle").click(function(e) {
-+        e.preventDefault();
-+        $("#wrapper").toggleClass("toggled");
-+    });
-+    </script>
++  <form id="detailsForm" action="" method="post" onsubmit="writeUserData()">
++    First name:<br>
++    <input type="text" id="firstname" name="firstname" value="">
++    <br>
++    Last name:<br>
++    <input type="text" id="lastname" name="lastname" value="">
++    <br>
++    Email:<br>
++    <input type="email" id="email" name="email" value="">
++    <br>
++    Address:<br>
++    <input type="text" id="address" name="address" value="">
++    <br>
++    Radius of interest:<br>
++    <input type="text" id="radius" name="radius" value="">
++    <br>
++    Contact phone number:<br>
++    <input type="text" id="phone-number" name="phone-number" value="">
++    <br><br>
++    <input type="submit" value="Submit">
++    <!-- <button onclick="writeUserData()">Try it</button> -->
++  </form>
 +
 +</body>
-+
 +</html>
